samples/_failures_safe/1761523574_01cf24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47a727c5.c: In function ‘main’:
./samples/SAFE/__tmp_47a727c5.c:131:27: error: expected ‘)’ at end of input
  131 |         if (rows1 != rows2
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_47a727c5.c:131:9: error: expected declaration or statement at end of input
  131 |         if (rows1 != rows2
      |         ^~
./samples/SAFE/__tmp_47a727c5.c:131:9: error: expected declaration or statement at end of input
